[package]
name = "ser-sled"
version = "0.2.0"
authors = ["Broward Apps"]
edition = "2021"
description = "A basic wrapper to use Serialize/Deserialize structs inside Sled (using bincode)"
repository = "https://github.com/Broward-Apps/ser-sled"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
sled = "0.34"
thiserror = "1"

bincode = { version = "2.0.0-rc.3", features = ["serde"], optional = true }

[features]
default = ["bincode"]
bincode = ["dep:bincode"]
