[package]
name = "ser-sled"
version = "0.3.0"
authors = ["chipshifter"]
edition = "2021"
description = "A basic wrapper to use Serialize/Deserialize structs inside Sled (using bincode)"
repository = "https://github.com/Broward-Apps/ser-sled"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
thiserror = "1"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde = { version = "1", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]